# huffman-hs

./: .gitignore  LICENSE  Setup.hs  huffman.cabal
src/: Huffman.hs  Main.hs
src/Huffman/: Base.hs  Encode.hs  GraphViz.hs
