cabal-version:      >=1.10
name:               huffman
version:            0.1.0.0
license:            BSD3
license-file:       LICENSE
copyright:          2020 Author name here
maintainer:         example@example.com
author:             Author name here
homepage:           https://github.com/githubuser/huffman#readme
category:           Web
build-type:         Simple
extra-source-files: README.md

executable huffman
    main-is:          Main.hs
    hs-source-dirs:   src
    other-modules:
        Huffman
        Huffman.Base
        Huffman.Encode
        Huffman.GraphViz

    default-language: Haskell2010
    build-depends:
        base >=4.7 && <5,
        binary -any,
        text -any,
        graphviz -any,
        bytestring -any
